# cccc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-build.yml  release.yml
crates/cccc-cli/: Cargo.toml
crates/cccc-cli/src/: cli.rs  config.rs  lang.rs  lib.rs  main.rs  output.rs  walk.rs
crates/cccc-cli/tests/: cli.rs  lang_smoke.rs
crates/cccc-cli/tests/fixtures/: sample.rb  sample.scm  sample.ts
crates/cccc-core/: Cargo.toml
crates/cccc-core/src/: engine.rs  ir.rs  lib.rs  report.rs
crates/cccc-es/: Cargo.toml
crates/cccc-es-cli/: Cargo.toml
crates/cccc-es-cli/tests/: cli.rs
crates/cccc-es/src/: lib.rs
crates/cccc-go/: Cargo.toml
crates/cccc-go-cli/: Cargo.toml
crates/cccc-go-cli/src/: main.rs
crates/cccc-go-cli/tests/: cli.rs
crates/cccc-go-cli/tests/fixtures/: sample.go
crates/cccc-go/src/: lib.rs
crates/cccc-php/: Cargo.toml
crates/cccc-php-cli/: Cargo.toml
crates/cccc-php-cli/src/: main.rs
crates/cccc-php-cli/tests/: cli.rs
crates/cccc-php-cli/tests/fixtures/: sample.php
crates/cccc-php/src/: lib.rs
crates/cccc-rb/: Cargo.toml
crates/cccc-rb/src/: lib.rs
crates/cccc-rs/: Cargo.toml
crates/cccc-rs-cli/: Cargo.toml
crates/cccc-rs-cli/src/: main.rs
crates/cccc-rs-cli/tests/: cli.rs
crates/cccc-rs-cli/tests/fixtures/: sample.rs
crates/cccc-rs/src/: lib.rs
crates/cccc-scheme/: Cargo.toml
crates/cccc-scheme/src/: lib.rs
crates/cccc-typescript/: Cargo.toml
crates/cccc-typescript/src/: lib.rs
docs/: ADDING_A_LANGUAGE.md
