[workspace]
members = ["crates/cccc-core", "crates/cccc-cli", "crates/cccc-es", "crates/cccc-es-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/moznion/cccc"
homepage = "https://github.com/moznion/cccc"

[workspace.dependencies]
cccc-core = { path = "crates/cccc-core", version = "0.1.0" }
cccc-cli = { path = "crates/cccc-cli", version = "0.1.0" }
cccc-es = { path = "crates/cccc-es", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
