[package]
name = "cccc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A CLI that measures Cognitive Complexity and Cyclomatic Complexity of TypeScript/JavaScript code"

[[bin]]
name = "cccc"
path = "src/main.rs"

[dependencies]
cccc-core = { workspace = true }
cccc-typescript = { workspace = true }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { workspace = true }
serde_json = "1"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
