[package]
name = "cccc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared CLI machinery (argument parsing, file walking, parallelism, output) for cccc language front-ends"

[dependencies]
cccc-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { workspace = true }
serde_json = "1"
rayon = "1"
