[package]
name = "cccc-es-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The cccc-es binary: ECMAScript/TypeScript complexity CLI (cccc-es adapter + shared cccc-cli machinery)"

[[bin]]
name = "cccc-es"
path = "src/main.rs"

[dependencies]
cccc-cli = { workspace = true }
cccc-es = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
