[package]
name = "cccc-go-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The cccc-go binary: Go complexity CLI (cccc-go adapter + shared cccc-cli machinery)"

[[bin]]
name = "cccc-go"
path = "src/main.rs"

[dependencies]
cccc-cli = { workspace = true }
cccc-go = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
