[package]
name = "cccc-go"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Go (gosyn) adapter that lowers source into the cccc-core complexity IR"

[dependencies]
cccc-core = { workspace = true }
# Pure-Rust Go syntax parser (no C toolchain), so cross-compilation stays clean.
gosyn = "0.2.10"
