[package]
name = "cccc-php-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The cccc-php binary: PHP cognitive/cyclomatic complexity CLI"

[[bin]]
name = "cccc-php"
path = "src/main.rs"

[dependencies]
cccc-cli = { workspace = true }
cccc-php = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
