[package]
name = "cccc-php"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PHP (php-rs-parser) adapter that lowers source into the cccc-core complexity IR"

[dependencies]
cccc-core = { workspace = true }
# Pure-Rust, fault-tolerant PHP parser (PHP 7.4–8.5), so there is no C toolchain
# and cross-compilation stays clean. `php-ast` provides the lifetime-free owned
# AST plus the `OwnedVisitor` full-traversal trait we drive lowering from.
php-rs-parser = "0.18.1"
php-ast = "0.18.1"
