[package]
name = "cccc-rs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The cccc-rs binary: Rust complexity CLI (cccc-rs adapter + shared cccc-cli machinery)"

[[bin]]
name = "cccc-rs"
path = "src/main.rs"

[dependencies]
cccc-cli = { workspace = true }
cccc-rs = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
